<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maask.amrwallet.WelcomeActivity"
    android:background="@drawable/background_gradiant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="-90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/wel_img"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:contentDescription="@string/app_logo"
            android:layout_height="200dp"
            android:src="@drawable/login_icon"/>

        <TextView
            android:id="@+id/wel_head"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/hintColor"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/wel_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/welcomeTextColor"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>
