<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:padding="@dimen/layout_padding"
    android:focusableInTouchMode="true"
    android:background="@drawable/background_gradiant"
    tools:context="com.example.maask.amrwallet.LoginActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pro_img"
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/login_icon"/>

            <EditText
                android:textColor="@android:color/white"
                android:id="@+id/usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/transparentColor"
                android:textColorHint="@color/hintColor"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_perm_identity_white_24dp"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borderColor"/>

            <EditText
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:id="@+id/usr_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/transparentColor"
                android:textColorHint="@color/hintColor"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borderColor"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_weight="1"
                    android:id="@+id/remember_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:buttonTint="@color/hintColor"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/remember_me"/>

                <TextView
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password ?"
                    android:textColor="@color/textColor"/>

            </LinearLayout>

            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/go_pro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:layout_marginTop="10dp" />

            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/go_reg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/registration_button"
                android:text="@string/registration"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/or"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or Login With Facebook "/>

            <com.facebook.login.widget.LoginButton
                android:layout_marginTop="10dp"
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
