<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/outgoing_logo"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_made_black_24dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="120dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/show_ot_money_name"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/show_ot_money_date"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="80dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:id="@+id/show_ot_money_amount"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:id="@+id/show_ot_money_time"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/trans_delete"
                android:contentDescription="@string/delete_logo"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_delete_black_24dp"/>


            <ImageView
                android:id="@+id/trans_edit"
                android:contentDescription="@string/edit_logo"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/edit"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>