<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background_gradiant"
    tools:context="com.example.maask.amrwallet.RegistrationActivity">

    <ScrollView
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/usr_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/touch_to_add_profile_pic"/>

            <EditText
                android:textColor="@android:color/white"
                android:id="@+id/usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:background="@color/transparentColor"
                android:textColorHint="@color/hintColor"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_perm_identity_white_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"/>

            <EditText
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:id="@+id/usr_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/transparentColor"
                android:textColorHint="@color/hintColor"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"/>

            <Button
                android:id="@+id/reg"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/registration_button"
                android:text="@string/save"
                android:textColor="@color/hintColor"
                android:layout_marginTop="40dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
