<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.maask.amrwallet.Home">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dashboard"
                    android:layout_marginBottom="10dp"
                    android:gravity="left|center_vertical"/>

                <TextView
                    android:id="@+id/show_date"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="right|center_vertical"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="@color/hintColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="250dp">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:padding="@dimen/layout_padding"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/hintColor"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="5dp"
                        android:text="@string/total_income_money"/>

                    <TextView
                        android:textColor="@color/income_color"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:id="@+id/total_incoming_money"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/hintColor"/>

                    <TextView
                        android:textColor="@color/hintColor"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/total_spend_money"/>

                    <TextView
                        android:textColor="@color/spend_color"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:id="@+id/total_outgoing_money"
                        android:paddingBottom="10dp" android:paddingStart="5dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/hintColor"/>

                    <TextView
                        android:textColor="@color/hintColor"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/deposit_box"/>
                    <TextView
                        android:textColor="@color/deposit_color"
                        android:id="@+id/deposit_box"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp" android:paddingStart="5dp"/>


                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/hintColor"/>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:foregroundGravity="center_horizontal|center_vertical"
                        android:id="@+id/pie_chart"/>

                </LinearLayout>

            </LinearLayout>

            <TextView

                android:fontFamily="sans-serif-condensed"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/entire"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/hintColor"/>

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/horizontal_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
